--- a/angular-ballet-frontend/src/app/app.component.html
+++ b/angular-ballet-frontend/src/app/app.component.html
@@ -7,7 +7,7 @@
 
     <nav>
       <ul>
-        <li><a routerLink="/dashboard">Home</a></li>
+        <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="/tickets">Tickets</a></li>
         <li><a routerLink="/dashboard">Customers</a></li>
         <li><a routerLink="/dashboard">Basket</a></li>
@@ -19,7 +19,6 @@
 </div>
 
 <div class="body">
-  <h1>{{title}}</h1>
   <router-outlet></router-outlet>
 </div>
 
