--- a/angular-ballet-frontend/src/app/tickets/tickets.component.html
+++ b/angular-ballet-frontend/src/app/tickets/tickets.component.html
@@ -1,4 +1,4 @@
-<h3>My Heroes</h3>
+<h3>Upcoming shows</h3>
 <a *ngFor="let ticket of tickets" class="col-1-4"
    routerLink="/detail/{{ticket.id}}">
   <div class="module hero">
