--- a/angular-ballet-frontend/src/app/app.component.html
+++ b/angular-ballet-frontend/src/app/app.component.html
@@ -9,9 +9,9 @@
       <ul>
         <li><a routerLink="/home">Home</a></li>
         <li><a routerLink="/tickets">Tickets</a></li>
-        <li><a routerLink="/dashboard">Customers</a></li>
-        <li><a routerLink="/dashboard">Basket</a></li>
-        <li><a routerLink="/dashboard">Orders</a></li>
+        <li><a routerLink="/customers">Customers</a></li>
+        <li><a routerLink="/basket">Basket</a></li>
+        <li><a routerLink="/orders">Orders</a></li>
       </ul>
     </nav>
 
