--- a/angular-ballet-frontend/src/app/home/home.component.html
+++ b/angular-ballet-frontend/src/app/home/home.component.html
@@ -1,1 +1,117 @@
-<p>home works!</p>
+  <aside class="extra-wrapper">
+    <p class="clearfix">
+      <span class="left">9000</span>
+      <span class="left">pointe<br>shoes</span>
+    </p>
+
+    <p class="clearfix">
+      <span class="left">18715</span>
+      <span class="left">sold<br>tickets</span>
+    </p>
+
+    <p class="clearfix">
+      <span class="left">158690</span>
+      <span class="left">loyal<br>visitors</span>
+    </p>
+  </aside>
+
+<div class="content-wrapper">
+  <section class="algemene-info-wrapper">
+    <div class=""clearfix>
+      <section class="left algemene-info-royal">
+        <p class="kader">Royal</p>
+        <h1>Who are we?</h1>
+        <p>Lorem ipsum dolor sit amet, consectetur
+          adipiscing elit. Nullam convallis sit amet elit a tempor.
+          Proin in ex nec sapien tempor suscipit a vel lorem.
+          Phasellus diam nibh, varius quis tellus in, ornare pellentesque diam.
+          Aliquam sit amet fringilla odio. Morbi dictum sem lectus, a semper leo rutrum vel.
+          Phasellus sapien lorem, faucibus sit amet molestie congue, condimentum eget orci.
+          Nam semper purus at aliquet ullamcorper. Curabitur porttitor,
+          turpis et varius mattis, leo urna ullamcorper diam, consectetur
+          convallis purus eros sed urna. Nunc vel vestibulum tortor.
+          Aliquam semper purus eros, in tempus massa fermentum sed.
+          Pellentesque posuere nisl condimentum magna feugiat, eu sodales arcu posuere.
+          Phasellus sapien lorem, faucibus sit amet molestie congue, condimentum eget orci.
+          Nam semper purus at aliquet ullamcorper. Curabitur porttitor,
+          turpis et varius mattis, leo urna ullamcorper diam, consectetur
+          convallis purus eros sed urna. Nunc vel vestibulum tortor.
+          Aliquam semper purus eros, in tempus massa fermentum sed.
+          Pellentesque posuere nisl condimentum magna feugiat, eu sodales arcu posuere.
+          Phasellus sapien lorem, faucibus sit amet molestie congue, condimentum eget orci.
+          Nam semper purus at aliquet ullamcorper. Curabitur porttitor,
+          turpis et varius mattis, leo urna ullamcorper diam, consectetur
+          convallis purus eros sed urna. Nunc vel vestibulum tortor.
+          Aliquam semper purus eros, in tempus massa fermentum sed.
+          Pellentesque posuere nisl condimentum magna feugiat, eu sodales arcu posuere.
+          Phasellus sapien lorem, faucibus sit amet molestie congue, condimentum eget orci.
+          Nam semper purus at aliquet ullamcorper. Curabitur porttitor,
+          turpis et varius mattis, leo urna ullamcorper diam, consectetur.
+          turpis et varius mattis, leo urna ullamcorper diam, consectetur.
+          turpis et vo
+
+
+        </p>
+      </section>
+
+      <div class="algemene-info-right right">
+        <section class="algemene-info-ballet">
+          <p class="kader">Ballet</p>
+          <h1>What is ballet?</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur
+            adipiscing elit. Nullam convallis sit amet elit a tempor.
+            Proin in ex nec sapien tempor suscipit a vel lorem.
+          </p>
+        </section>
+
+        <section class="algemene-info-uren">
+          <table>
+            <thread>
+              <tr>
+                <th colspan="2">
+                  <h1>Opening Hours</h1>
+                </th>
+              </tr>
+            </thread>
+            <tbody>
+            <tr>
+              <td>Monday</td>
+              <td>Closed</td>
+            </tr>
+            <tr>
+              <td>Tuesday</td>
+              <td>16u-22u</td>
+            </tr>
+            <tr>
+              <td>Wednesday</td>
+              <td>16u-22u</td>
+            </tr>
+            <tr>
+              <td>Thursday</td>
+              <td>16u-22u</td>
+            </tr>
+            <tr>
+              <td>Friday</td>
+              <td>16u-22u</td>
+            </tr>
+            <tr>
+              <td>Saturday</td>
+              <td>16u-22u</td>
+            </tr>
+            <tr>
+              <td>Sunday</td>
+              <td>16u-22u</td>
+            </tr>
+            </tbody>
+          </table>
+          <img src="">
+        </section>
+      </div>
+    </div>
+  </section>
+
+  <aside class="blok-intro">
+    <p>Do you want to receive emails from the Royal Ballet with news and special offers? Subscribe to our newsletter!</p>
+  </aside>
+</div>
+
