--- a/angular-ballet-frontend/src/app/app.component.html
+++ b/angular-ballet-frontend/src/app/app.component.html
@@ -14,9 +14,25 @@
         <li><a routerLink="/orders">Orders</a></li>
       </ul>
     </nav>
-
   </div>
 </div>
+
+<aside class="extra-wrapper">
+  <p class="clearfix">
+    <span class="left">9000</span>
+    <span class="left">pointe<br>shoes</span>
+  </p>
+
+  <p class="clearfix">
+    <span class="left">18715</span>
+    <span class="left">sold<br>tickets</span>
+  </p>
+
+  <p class="clearfix">
+    <span class="left">158690</span>
+    <span class="left">loyal<br>visitors</span>
+  </p>
+</aside>
 
 <div class="body">
   <router-outlet></router-outlet>
