--- a/angular-ballet-frontend/src/app/home/home.component.html
+++ b/angular-ballet-frontend/src/app/home/home.component.html
@@ -1,20 +1,3 @@
-  <aside class="extra-wrapper">
-    <p class="clearfix">
-      <span class="left">9000</span>
-      <span class="left">pointe<br>shoes</span>
-    </p>
-
-    <p class="clearfix">
-      <span class="left">18715</span>
-      <span class="left">sold<br>tickets</span>
-    </p>
-
-    <p class="clearfix">
-      <span class="left">158690</span>
-      <span class="left">loyal<br>visitors</span>
-    </p>
-  </aside>
-
 <div class="content-wrapper">
   <section class="algemene-info-wrapper">
     <div class=""clearfix>
@@ -66,13 +49,13 @@
 
         <section class="algemene-info-uren">
           <table>
-            <thread>
+            <div class="thread">
               <tr>
                 <th colspan="2">
                   <h1>Opening Hours</h1>
                 </th>
               </tr>
-            </thread>
+            </div>
             <tbody>
             <tr>
               <td>Monday</td>
