--- a/angular-ballet-frontend/src/app/tickets/tickets.component.css
+++ b/angular-ballet-frontend/src/app/tickets/tickets.component.css
@@ -1,17 +1,7 @@
-#textMain{
-  color: #F29E03;
-  padding: 40px;
-  margin-right: 20px;
-  border: 2px solid #F29E03;
-  text-align: center;
-  line-height: 1.8;
-  font-weight: bold;
-  border-radius: 5px;
-}
-
 [class*='col-'] {
   float: left;
-  padding-right: 20px;
+  padding-right: 10px;
+  padding-left: 10px;
   padding-bottom: 50px;
 }
 
@@ -25,15 +15,9 @@ a {
   box-sizing: border-box;
 }
 
-#dream{
-  text-align: center;
-  font-size: 350%;
-  margin-bottom: 20px;
-  padding-top: 40px;
-}
-
 h3 {
   text-align: center;
+  font-family: 'Raleway', sans-serif;
   font-size: 300%;
   padding-top: 10px;
   padding-bottom: 50px;
@@ -42,6 +26,7 @@ h3 {
 
 h4 {
   position: relative;
+  font-family: 'Raleway', sans-serif;
 }
 .grid {
   margin: 0;
@@ -52,19 +37,17 @@ h4 {
 .module {
   padding: 20px;
   text-align: center;
-  color: #11261F;
+  color: white;
   max-height: 120px;
   min-width: 120px;
-  background-color: #0CFFE1;
-  border-radius: 5px;
-  border: 2px solid #11261F;
+  background-color: black;
 }
 
 .module:hover {
-  background-color: #F29B30;
+  background-color: white;
   cursor: pointer;
-  color: #592202;
-  border: 2px solid #592202;
+  color: black;
+  border: 3px solid black;
 }
 .grid-pad {
   padding: 10px 0;
@@ -72,6 +55,11 @@ h4 {
 .grid-pad > [class*='col-']:last-of-type {
   padding-right: 20px;
 }
+
+.list{
+  padding-bottom: 8em;
+}
+
 @media (max-width: 600px) {
   .module {
     font-size: 10px;
