--- a/angular-ballet-frontend/src/app/tickets/tickets.component.html
+++ b/angular-ballet-frontend/src/app/tickets/tickets.component.html
@@ -1,8 +1,9 @@
 <h3>Upcoming shows</h3>
+<div class="list">
 <a *ngFor="let ticket of tickets" class="col-1-4"
    routerLink="/detail/{{ticket.id}}">
-  <div class="module hero">
+  <div class="module">
     <h4>{{ticket.name}}</h4>
   </div>
 </a>
-
+</div>
